@@ -23,6 +23,7 @@
         <module>hook-griefprevention</module>
 
         <module>hook-griefdefender-1</module>
+        <module>hook-griefdefender-2</module>
 
         <module>hook-redprotect</module>
 
