@@ -1,4 +1,5 @@
 Alpha 0.1.8.41
+- Add support for GriefDefender v2. Thanks, haroldrc, for the heads-up!
 
 Alpha 0.1.8.40
 - Add support for 1.19.1.
